# bkmrk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  bkmrk.py  bm.py  old_bkmrk.py  prek.toml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
bm/: __init__.py  cli.py  commands.py  io.py  models.py  utils.py
src/bm/: cli.py  commands.py  io.py  models.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_helpers.py  test_io.py  test_models.py  test_utils.py
