[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bkmrk"
version = "0.2.2"
description = "Plain-text, pass-style bookmarks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bookmarks", "bm", "bkmrk", "Plain-text bookmarks"]
dependencies = []

[project.optional-dependencies]
completion = [
    "argcomplete>=3",
]
dev = [
    "argcomplete>=3",
    "commitizen",
    "mutmut",
    "prek",
    "pytest-cov",
    "pytest>=7.0",
    "ruff",
]
build = [
    "build",
    "commitizen",
    "twine",
]

[project.scripts]
bm = "bm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["mutants"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.2"
tag_format = "$version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true

[tool.mutmut]
paths_to_mutate = ["src/bm/"]
tests_dir = ["tests"]
runner = ".venv/bin/python -m pytest -x -q -k 'not test_module_entry_point_runs'"
do_not_mutate = ["src/bm/__init__.py", "src/bm/__main__.py"]
